# swish

./: .ghci  .hgignore  .hgtags  CHANGES  HLint.hs  NOTES  README  Swish.hs  TODO  swish.cabal
Data/Interned/: URI.hs
Swish/: RDF.hs
Swish/HaskellRDF/: BuiltInDatatypes.hs  BuiltInMap.hs  BuiltInMapTest.hs  BuiltInRules.hs  ClassRestrictionRule.hs  Datatype.hs  GraphClass.hs  GraphMatch.hs  GraphMem.hs  GraphPartition.hs  GraphPartitionTest.hs  GraphTest.hs  MapXsdInteger.hs  N3Formatter.hs  N3FormatterTest.hs  N3Parser.hs  N3ParserTest.hs  NTFormatter.hs  NTParser.hs  NTParserTest.hs  ParsecLanguage.hs  Proof.hs  RDFDatatype.hs  RDFDatatypeXsdInteger.hs  RDFDatatypeXsdIntegerTest.hs  RDFDatatypeXsdString.hs  RDFGraph.hs  RDFGraphShowM.hs  RDFGraphTest.hs  RDFParser.hs  RDFProof.hs  RDFProofContext.hs  RDFProofContextTest.hs  RDFProofTest.hs  RDFQuery.hs  RDFQueryTest.hs  RDFRuleset.hs  RDFRulesetTest.hs  RDFVarBinding.hs  Rule.hs  (+10 more)
Swish/HaskellRDF/Dfa/: Dfa.lhs
Swish/HaskellRDF/Sort/: AdaptiveHeapSort.lhs  BraunHeap.lhs  CartesianTree.lhs  DigitalSort.lhs  FingerSearchtree.lhs  Force.lhs  HeapSort.lhs  LibBase.lhs  ListLib.lhs  MargeSort.lhs  MergeSort.lhs  PairingHeap.lhs  QuickSort.lhs  RedBlackTree.lhs  SplaySort.lhs  Squiggol.lhs  Stable.lhs
Swish/HaskellUtils/: AccumulateM.hs  DateTime.hs  ErrorM.hs  FunctorM.hs  ListHelpers.hs  LookupMap.hs  LookupMapTest.hs  MiscHelpers.hs  Namespace.hs  Parse.hs  ParseTest.hs  ParseURI.hs  ParseURITest.hs  PartOrderedCollection.hs  ProcessURI.hs  QName.hs  QNameTest.hs  ShowM.hs  TestHelpers.hs  TraceHelpers.hs  URITest.hs
Swish/HaskellUtils/Network/: URI.hs
Swish/RDF/: BuiltInDatatypes.hs  BuiltInMap.hs  BuiltInRules.hs  ClassRestrictionRule.hs  Datatype.hs  GraphClass.hs  GraphMatch.hs  GraphMem.hs  GraphPartition.hs  MapXsdInteger.hs  N3Formatter.hs  N3Parser.hs  NTFormatter.hs  NTParser.hs  Proof.hs  RDFDatatype.hs  RDFDatatypeXsdInteger.hs  RDFDatatypeXsdString.hs  RDFGraph.hs  RDFGraphShowM.hs  RDFParser.hs  RDFProof.hs  RDFProofContext.hs  RDFQuery.hs  RDFRuleset.hs  RDFVarBinding.hs  Rule.hs  Ruleset.hs  Swish.hs  SwishCommands.hs  SwishMain.hs  SwishMonad.hs  SwishScript.hs  TurtleFormatter.hs  TurtleParser.hs  VarBinding.hs  Vocabulary.hs
Swish/RDF/Vocabulary/: DublinCore.hs  FOAF.hs  Geo.hs  OWL.hs  RDF.hs
Swish/Utils/: DateTime.hs  ErrorM.hs  ListHelpers.hs  LookupMap.hs  MiscHelpers.hs  Namespace.hs  PartOrderedCollection.hs  QName.hs  ShowM.hs  TestHelpers.hs  TraceHelpers.hs
app/: RunW3CTests.hs  SwishApp.hs
hcar/2011-05/: swish.tex
hcar/2011-11/: Swish-DS.tex  swish.tex
scripts/: SwishExample.ss  SwishTest.ss  VehicleCapacity.ss
scripts/data/: VehicleRules.n3
src/: Swish.hs
src/Data/: LookupMap.hs
src/Data/Interned/: URI.hs
src/Data/Ord/: Partial.hs
src/Data/String/: ShowLines.hs
src/Network/URI/: Ord.hs
src/Swish/: Commands.hs  Datatype.hs  GraphClass.hs  GraphMatch.hs  GraphMem.hs  GraphPartition.hs  Monad.hs  Namespace.hs  Proof.hs  QName.hs  RDF.hs  Rule.hs  Ruleset.hs  Script.hs  VarBinding.hs
src/Swish/RDF/: BuiltIn.hs  BuiltInDatatypes.hs  BuiltInMap.hs  BuiltInRules.hs  ClassRestrictionRule.hs  Datatype.hs  Graph.hs  GraphClass.hs  GraphMatch.hs  GraphMem.hs  GraphPartition.hs  GraphShowLines.hs  GraphShowM.hs  MapXsdDecimal.hs  MapXsdInteger.hs  N3Formatter.hs  N3Parser.hs  NTFormatter.hs  NTParser.hs  Proof.hs  ProofContext.hs  Query.hs  RDFDatatype.hs  RDFDatatypeXsdDecimal.hs  RDFDatatypeXsdInteger.hs  RDFDatatypeXsdString.hs  RDFGraph.hs  RDFGraphShowM.hs  RDFParser.hs  RDFProof.hs  RDFProofContext.hs  RDFQuery.hs  RDFRuleset.hs  RDFVarBinding.hs  Rule.hs  Ruleset.hs  SwishCommands.hs  SwishMain.hs  SwishMonad.hs  SwishScript.hs  (+4 more)
src/Swish/RDF/BuiltIn/: Datatypes.hs  Rules.hs
src/Swish/RDF/Datatype/XSD/: Decimal.hs  Integer.hs  MapDecimal.hs  MapInteger.hs  String.hs
src/Swish/RDF/Formatter/: Internal.hs  N3.hs  NTriples.hs  Turtle.hs
src/Swish/RDF/Parser/: N3.hs  NTriples.hs  Turtle.hs  Utils.hs
src/Swish/RDF/Vocabulary/: DublinCore.hs  FOAF.hs  Geo.hs  OWL.hs  Provenance.hs  RDF.hs  SIOC.hs  XSD.hs
src/Swish/Utils/: ListHelpers.hs  LookupMap.hs  Namespace.hs  PartOrderedCollection.hs  QName.hs
tests/: BuiltInMapTest.hs  GraphPartitionTest.hs  GraphTest.hs  LookupMapTest.hs  N3FormatterTest.hs  N3ParserTest.hs  NTTest.hs  QNameTest.hs  RDFDatatypeXsdIntegerTest.hs  RDFGraphTest.hs  RDFProofContextTest.hs  RDFProofTest.hs  RDFQueryTest.hs  RDFRulesetTest.hs  SwishTest.hs  TestHelpers.hs  TurtleParserTest.hs  TurtleTest.hs  VarBindingTest.hs
