Name:                swish
Version:             0.3.0.0
License:             LGPL
License-file:        LICENSE 
Author:              Graham Klyne - GK@ninebynine.org
Maintainer:          dburke@cfa.harvard.edu
Homepage:            https://bitbucket.org/doug_burke/swish
Bug-reports:         https://bitbucket.org/doug_burke/swish/issues

Category:            Semantic Web
Synopsis:            A semantic web toolkit. 
Description:        Swish is a framework, written in the purely functional 
                    programming language Haskell, for performing deductions in 
                    RDF data using a variety of techniques. Swish is conceived 
                    as a toolkit for experimenting with RDF inference, and for 
                    implementing stand-alone RDF file processors (usable in 
                    similar style to CWM, but with a view to being extensible 
                    in declarative style through added Haskell function and data
                    value declarations). It explores Haskell as \"a scripting 
                    language for the Semantic Web\".
                    .
                    Swish is a work-in-progress, and currently incorporates:
                    .
                    * Notation3 input and output.
                    .
                    * RDF graph isomorphism testing and merging.
                    .
                    * Display of differences between RDF graphs.
                    .
                    * Inference operations in forward chaining, backward chaining and proof-checking modes.
                    .
                    * Simple Horn-style rule implementations, extendable through variable binding modifiers and filters.
                    .
                    * Class restriction rule implementation, primarily for datatype inferences.
                    .
                    * RDF formal semantics entailment rule implementation.
                    .
                    * Complete, ready-to-run, command-line and script-driven programs.
                    .
                    References
                    .
                    1) <http://www.ninebynine.org/RDFNotes/Swish/Intro.html>
                    .
                    2) <http://www.ninebynine.org/Software/swish-0.2.1.html>
                    .
                    3) CWM: <http://www.w3.org/2000/10/swap/doc/cwm.html>
                    .

Tested-With:         GHC>=6.12.3
Build-Type:          Simple
Data-Files:          README

Cabal-Version:       >= 1.6

Flag  tests
  Description: Build the test programs.
  Default:     False

Library
   Build-Depends:
      base >=3 && < 5,
      binary == 0.5.*,
      bytestring == 0.9.*,
      containers == 0.3.*,
      array == 0.3.*,
      parallel == 2.2.*,
      parsec == 2.1.*,
      random == 1.0.*,
      old-time == 1.0.*,
      mtl >= 1 && < 3,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      directory >= 1.0 && <= 1.1,
      filepath >= 1.1 && <= 1.2
   Exposed-Modules:
      Swish.HaskellRDF.BuiltInDatatypes
      Swish.HaskellRDF.BuiltInMap
      Swish.HaskellRDF.BuiltInRules
      Swish.HaskellRDF.ClassRestrictionRule
      Swish.HaskellRDF.Datatype
      Swish.HaskellRDF.Dfa.Dfa
      Swish.HaskellRDF.GraphClass
      Swish.HaskellRDF.GraphMatch
      Swish.HaskellRDF.GraphMem
      Swish.HaskellRDF.GraphPartition
      Swish.HaskellRDF.MapXsdInteger
      Swish.HaskellRDF.NTFormatter
      Swish.HaskellRDF.NTParser
      Swish.HaskellRDF.N3Formatter
      Swish.HaskellRDF.N3Parser
      Swish.HaskellRDF.Proof
      Swish.HaskellRDF.RDFDatatype
      Swish.HaskellRDF.RDFDatatypeXsdInteger
      Swish.HaskellRDF.RDFDatatypeXsdString
      Swish.HaskellRDF.RDFGraph
      Swish.HaskellRDF.RDFGraphShowM
      Swish.HaskellRDF.RDFParser
      Swish.HaskellRDF.RDFProof
      Swish.HaskellRDF.RDFProofContext
      Swish.HaskellRDF.RDFQuery
      Swish.HaskellRDF.RDFRuleset
      Swish.HaskellRDF.RDFVarBinding
      Swish.HaskellRDF.Rule
      Swish.HaskellRDF.Ruleset
      Swish.HaskellRDF.SwishCommands
      -- Swish.HaskellRDF.SwishMain
      Swish.HaskellRDF.SwishMonad
      Swish.HaskellRDF.SwishScript
      Swish.HaskellRDF.VarBinding
      Swish.HaskellRDF.Vocabulary
      Swish.HaskellUtils.DateTime
      Swish.HaskellUtils.ErrorM
      Swish.HaskellUtils.ListHelpers
      Swish.HaskellUtils.LookupMap
      Swish.HaskellUtils.MiscHelpers
      Swish.HaskellUtils.Namespace
      Swish.HaskellUtils.PartOrderedCollection
      Swish.HaskellUtils.QName
      Swish.HaskellUtils.ShowM
      Swish.HaskellUtils.TraceHelpers

   other-modules:
      -- Paths_swish

   ghc-options:
      -Wall -fno-warn-orphans

Executable         BuiltInMapTest
   Main-Is:        tests/BuiltInMapTest.hs
   if !flag(tests)
      buildable: False

Executable         GraphPartitionTest
   Main-Is:        tests/GraphPartitionTest.hs
   if !flag(tests)
      buildable: False

Executable         GraphTest
   Main-Is:        tests/GraphTest.hs
   if !flag(tests)
      buildable: False

Executable         NTTest
   Main-Is:        tests/NTTest.hs
   if !flag(tests)
      buildable: False

Executable         N3ParserTest
   Main-Is:        tests/N3ParserTest.hs
   if !flag(tests)
      buildable: False

Executable         N3FormatterTest
   Main-Is:        tests/N3FormatterTest.hs
   if !flag(tests)
      buildable: False

Executable         RDFDatatypeXsdIntegerTest
   Main-Is:        tests/RDFDatatypeXsdIntegerTest.hs
   if !flag(tests)
      buildable: False

Executable         RDFGraphTest
   Main-Is:        tests/RDFGraphTest.hs
   if !flag(tests)
      buildable: False

Executable         RDFProofContextTest
   Main-Is:        tests/RDFProofContextTest.hs
   if !flag(tests)
      buildable: False
                    
Executable         RDFProofText
   Main-Is:        tests/RDFProofTest.hs
   if !flag(tests)
      buildable: False
                     
Executable         RDFQueryTest
   Main-Is:        tests/RDFQueryTest.hs
   if !flag(tests)
      buildable: False

Executable         RDFRulesetTest
   Main-Is:        tests/RDFRulesetTest.hs
   if !flag(tests)
      buildable: False

Executable         VarBindingTest
   Main-Is:        tests/VarBindingTest.hs
   if !flag(tests)
      buildable: False

Executable         LookupMapTest
   Main-Is:        tests/LookupMapTest.hs
   if !flag(tests)
      buildable: False

Executable         QNameTest
   Main-Is:        tests/QNameTest.hs
   if !flag(tests)
      buildable: False

 -- we do not have the data files to run this test
 Executable         SwishTest
   Main-Is:        tests/SwishTest.hs
   Other-Modules:  Swish.HaskellRDF.SwishMain

Executable         Swish
   Main-Is:        Swish/HaskellRDF/Swish.hs
   Other-Modules:  Swish.HaskellRDF.SwishMain
                   Paths_swish

   ghc-options:
      -Wall -fno-warn-orphans

