Name:               swish
Version:            0.7.0.0
Stability:          experimental
License:            LGPL
License-file:       LICENSE 
Author:             Graham Klyne - GK@ninebynine.org
Copyright:          (c) 2003, 2004 G. Klyne; 2009 Vasili I Galchin; 2011, 2012 Doug Burke; All rights reserved.
Maintainer:         dburke@cfa.harvard.edu
Category:           Semantic Web
Synopsis:           A semantic web toolkit. 

Tested-With:        GHC==7.4.2
Cabal-Version:      >= 1.9.2
Homepage:           https://bitbucket.org/doug_burke/swish/wiki/Home
Bug-reports:        https://bitbucket.org/doug_burke/swish/issues

Description:        
  Swish is a framework, written in the purely functional 
  programming language Haskell, for performing deductions in 
  RDF data using a variety of techniques. Swish is conceived 
  as a toolkit for experimenting with RDF inference, and for 
  implementing stand-alone RDF file processors (usable in 
  similar style to CWM, but with a view to being extensible 
  in declarative style through added Haskell function and data
  value declarations). It explores Haskell as \"a scripting 
  language for the Semantic Web\".
  .
  Swish is a work-in-progress, and currently incorporates:
  .
  * Turtle, Notation3 and NTriples input and output. The N3 support is
    incomplete (no handling of @\@forAll@).
  .
  * RDF graph isomorphism testing and merging.
  .
  * Display of differences between RDF graphs.
  .
  * Inference operations in forward chaining, backward chaining and proof-checking modes.
  .
  * Simple Horn-style rule implementations, extendable through variable binding modifiers and filters.
  .
  * Class restriction rule implementation, primarily for datatype inferences.
  .
  * RDF formal semantics entailment rule implementation.
  .
  * Complete, ready-to-run, command-line and script-driven programs.
  .
  Changes:
  .
  [Version 0.7.0.0] 
  Removed @asubj@, @apred@ and @aobj@ from @Swish.RDF.GraphClass@ and
  @Swish.RDF.RDFGraph@; use
  @arcSubj@, @arcPred@ or @arcObj@ instead.
  Removed un-used @containedIn@ element of the @LDGraph@ type class.
  Attempt to support using versions 0.8 or 0.9 of the @intern@ package. Switch to
  @Control.Exception.try@ to avoid deprecation warnings from @System.IO.Error.try@.
  .
  Previous versions can be found at <https://bitbucket.org/doug_burke/swish/src/tip/CHANGES>.
  .
  References:
  .
    - <http://www.ninebynine.org/RDFNotes/Swish/Intro.html>
  .
    - <http://www.ninebynine.org/Software/swish-0.2.1.html>
  .
    - CWM: <http://www.w3.org/2000/10/swap/doc/cwm.html>
  .

Build-Type:         Simple
Data-Files:         README
                    scripts/*.ss

Source-repository head
  type:     mercurial
  location: https://bitbucket.org/doug_burke/swish

Flag  developer
  Description: Turn on developer flags
  Default:     False

-- Flag  hpc
--   Description: Use Hpc for the tests
--   Default:     False

Library
   Build-Depends:
      base >=3 && < 5,
      binary == 0.5.*,
      containers >= 0.3 && < 0.5,
      directory >= 1.0 && < 1.2,
      filepath >= 1.1 && < 1.4,
      hashable == 1.1.*,
      mtl >= 2 && < 3,
      network >= 2.2 && < 2.4,
      old-locale == 1.0.*, 
      polyparse >= 1.6 && < 1.9,
      text == 0.11.*,
      time >= 1.1 && < 1.5

   if impl(ghc < 7.4.0)
      Build-Depends:   intern == 0.8
   if impl(ghc >= 7.4.0)
      Build-Depends:   intern >= 0.8 && < 1.0

   Hs-Source-Dirs: src/

   Exposed-Modules:
      Swish
      Swish.RDF
      Swish.RDF.BuiltInDatatypes
      Swish.RDF.BuiltInMap
      Swish.RDF.BuiltInRules
      Swish.RDF.ClassRestrictionRule
      Swish.RDF.Datatype
      Swish.RDF.GraphClass
      Swish.RDF.GraphMatch
      Swish.RDF.GraphMem
      Swish.RDF.GraphPartition
      Swish.RDF.MapXsdDecimal
      Swish.RDF.MapXsdInteger
      Swish.RDF.NTFormatter
      Swish.RDF.NTParser
      Swish.RDF.N3Formatter
      Swish.RDF.N3Parser
      Swish.RDF.Proof
      Swish.RDF.RDFDatatype
      Swish.RDF.RDFDatatypeXsdDecimal
      Swish.RDF.RDFDatatypeXsdInteger
      Swish.RDF.RDFDatatypeXsdString
      Swish.RDF.RDFGraph
      Swish.RDF.RDFGraphShowM
      Swish.RDF.RDFParser
      Swish.RDF.RDFProof
      Swish.RDF.RDFProofContext
      Swish.RDF.RDFQuery
      Swish.RDF.RDFRuleset
      Swish.RDF.RDFVarBinding
      Swish.RDF.Rule
      Swish.RDF.Ruleset
      Swish.RDF.SwishCommands
      Swish.RDF.SwishMain
      Swish.RDF.SwishMonad
      Swish.RDF.SwishScript
      Swish.RDF.TurtleFormatter
      Swish.RDF.TurtleParser
      Swish.RDF.VarBinding
      Swish.RDF.Vocabulary
      Swish.RDF.Vocabulary.DublinCore
      Swish.RDF.Vocabulary.FOAF
      Swish.RDF.Vocabulary.Geo
      Swish.RDF.Vocabulary.OWL
      Swish.RDF.Vocabulary.Provenance
      Swish.RDF.Vocabulary.RDF
      Swish.RDF.Vocabulary.SIOC
      Swish.RDF.Vocabulary.XSD
      Swish.Utils.ListHelpers
      Swish.Utils.LookupMap
      Swish.Utils.MiscHelpers
      Swish.Utils.Namespace
      Swish.Utils.PartOrderedCollection
      Swish.Utils.QName
      Swish.Utils.ShowM
      Data.Interned.URI

   ghc-options:
      -Wall -fno-warn-orphans

   if flag(developer)
      ghc-options: -Werror
      ghc-prof-options: -auto-all

Test-Suite test-builtinmap
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:    BuiltInMapTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      swish

Test-Suite test-graphpartition
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        GraphPartitionTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      swish

Test-Suite test-graph
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        GraphTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      swish

Test-Suite test-nt
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        NTTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      swish,
      text == 0.11.*

Test-Suite test-n3parser
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        N3ParserTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

Test-Suite test-n3formatter
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        N3FormatterTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

Test-Suite test-rdfdatatypexsdinteger
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        RDFDatatypeXsdIntegerTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

Test-Suite test-rdfgraph
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        RDFGraphTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      old-locale == 1.0.*,
      swish,
      text == 0.11.*,
      time >= 1.1 && < 1.5

Test-Suite test-rdfproofcontext
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        RDFProofContextTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

Test-Suite test-rdfproof
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        RDFProofTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

Test-Suite test-rdfquery
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        RDFQueryTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

Test-Suite test-rdfruleset
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        RDFRulesetTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

Test-Suite test-varbinding
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        VarBindingTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      swish

Test-Suite test-lookupmap
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        LookupMapTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      swish

Test-Suite test-qname
   type:       exitcode-stdio-1.0
   Hs-Source-Dirs: tests/
   Main-Is:        QNameTest.hs
   Other-Modules:  TestHelpers

   ghc-options:
      -Wall -fno-warn-orphans

   Build-Depends:
      base >=3 && < 5,
      HUnit == 1.2.*,
      network >= 2.2 && < 2.4,
      swish,
      text == 0.11.*

 -- we do not have the data files to run this test
 Executable         SwishTest
   Main-Is:        tests/SwishTest.hs

Executable         Swish
   Main-Is:        SwishApp.hs
   Hs-Source-Dirs: app/ 
   Other-Modules:  Paths_swish

   ghc-options:
      -Wall -fno-warn-orphans

   if flag(developer)
      ghc-options: -Werror
      ghc-prof-options: -auto-all

   Build-Depends:
      base >=3 && < 5,
      swish
